# sinky

./: Cargo.toml  LICENSE
examples/: example.rs
src/: config.rs  formats.rs  lib.rs  util.rs
src/backends/: mod.rs  pipe.rs  rodio.rs
src/filters/: convert.rs  mod.rs  requantizer.rs  volume.rs
