[package]
name = "sinky"
version = "0.1.0"
authors = ["johannesd3 <johannesd@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { version = "0.13", optional = true, default-features = false }
cpal = {version ="0.13", optional = true }
thiserror = { version = "1", optional = true }

[features]
rodio-backend = ["rodio", "cpal", "thiserror"]
